# adapol

./: .gitignore  MANIFEST.in  README.md  aaa.py  ac_pes.py  discrete.ipynb  hybdecomp.py  pyproject.toml  pytest.ini  semicircle.ipynb  test_ac.py
.github/workflows/: publish-to-pypi.yml  python-package.yml
aaadapol/: fit_utils.py
doc/: algorithms.rst  conf.py  index.rst  python.rst  theories.rst
docs/: index.html
docs/0.1.x/: .buildinfo  algorithms.html  documentation.html  genindex.html  index.html  python.html  search.html  searchindex.js  theories.html
docs/0.1.x/_modules/: index.html
docs/0.1.x/_modules/adapol/: anacont.html  hybfit.html
docs/0.1.x/_sources/: algorithms.rst.txt  documentation.rst.txt
docs/0.1.x/_sources/tutorials/: semicircle.rst.txt
docs/0.1.x/tutorials/: discrete.html  semicircle.html
docs/main/: algorithms.html  documentation.html  index.html  objects.inv  search.html
docs/main/_modules/: index.html
docs/main/_sources/: python.rst.txt
docs/main/tutorials/: discrete.html  semicircle.html
example/: discrete.ipynb  hubbarddimer.ipynb  semicircle.ipynb
hyb_decomp/: hybdecomp.py
hyb_decomp/hyb_data/: omega.txt
joss/: paper.bib  paper.md
matsubara/: __init__.py  aaa.py  fit_utils.py  matsubara.py
src/: __init__.py  aaa.py  ac_pes.py  hybdecomp.py  matsubara.py
src/adapol/: __init__.py  aaa.py  anacont.py  fit_utils.py  fit_utils_xca.py  hybfit.py  matsubara.py
test/: __init__.py  test_ac.py  test_cont.py  test_discrete.py  test_panel_quadrature.py  test_semicircle.py
test/Examples/hyb_data/: omega_20231129.txt
(+2 files in other folders)
